--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,7 @@
-<div class="container">
-  // teste
-  <h2>Home</h2>
-  <p>Login realizado com sucesso.</p>
-  <button (click)="logout()">Sair</button>
+<div class="page-container">
+  <div class="card">
+    <h2>Bem-vindo</h2>
+    <p>Login realizado com sucesso.</p>
+    <button (click)="logout()">Sair</button>
+  </div>
 </div>
