--- a/src/app/features/investimentos/investimentos.component.html
+++ b/src/app/features/investimentos/investimentos.component.html
@@ -1,4 +1,4 @@
-<div class="invest-container">
+<div class="page-container">
   <header class="page-header">
     <div class="header-content">
       <a routerLink="/dashboard" class="back-btn">
